--- a/App_UN_Accidentalidad.html
+++ b/App_UN_Accidentalidad.html
@@ -379,7 +379,7 @@ summary {
 </div>
 
 
-<p>Portilla, Stefano <br> Restrepo, Juan Esteban <br> Sterling, Jhordy <br> Vergara, Samir <br></p>
+<p>Portilla, Estefano <br> Restrepo, Juan Esteban <br> Sterling, Jhordy <br> Vergara, Samir <br></p>
 <div id="introduccion" class="section level3">
 <h3>1. Introducción</h3>
 <div style="text-align: justify">
